tests/baselines/reference/parserStrictMode3-negative.errors.txt
==== tests/cases/compiler/parserStrictMode3-negative.ts (1 errors) ====
    eval = 1;
    ~~~~
!!! parserStrictMode3-negative.ts(1,1): error TS2130: Invalid left-hand side of assignment expression.